@@ -47,13 +47,14 @@ public abstract class FieldProperties {
   protected final static int SORT_MISSING_LAST   = 0x00000800;
   
   protected final static int REQUIRED            = 0x00001000;
+  protected final static int OMIT_POSITIONS      = 0x00002000;
   
   static final String[] propertyNames = {
           "indexed", "tokenized", "stored",
           "binary", "omitNorms", "omitTermFreqAndPositions",
           "termVectors", "termPositions", "termOffsets",
           "multiValued",
-          "sortMissingFirst","sortMissingLast","required"
+          "sortMissingFirst","sortMissingLast","required", "omitPositions"
   };
 
   static final Map<String,Integer> propertyMap = new HashMap<String,Integer>();
